Change servers port

--- a/python/kobin/Dockerfile
+++ b/python/kobin/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.6.1-alpine
 
 WORKDIR /app
-ENV WSGICLI_HOST=0.0.0.0 WSGICLI_PORT=8000
+ENV WSGICLI_HOST=0.0.0.0
 RUN apk --update add --no-cache gcc libc-dev
 RUN pip install --upgrade pip && pip install kobin wsgicli
 COPY python/kobin/main.py /app
