--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -44,7 +44,7 @@ http {
     server ruby-hanami:8101 fail_timeout=0;
     server ruby-sinatra:8102 fail_timeout=0;
     server python-kobin:8103 fail_timeout=0;
-    server gokang-gin:8104 fail_timeout=0;
+    server golang-gin:8104 fail_timeout=0;
   }
 
   server {
