--- a/ruby/sinatra/Dockerfile
+++ b/ruby/sinatra/Dockerfile
@@ -5,4 +5,4 @@ RUN apk --update add --no-cache make g++ libc-dev
 COPY ruby/sinatra/Gemfile ruby/sinatra/Gemfile.lock /app/
 RUN bundle install
 COPY ruby/sinatra/app.rb /app/
-CMD bundle exec ruby app.rb -e production -o 0.0.0.0 -p PORT
+CMD bundle exec ruby app.rb -e production -o 0.0.0.0 -p $PORT
