--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -51,8 +51,8 @@ http {
     listen 80 default_server;
     listen 443 ssl;
     server_name $env_server_name;
-    ssl_certificate     /etc/letsencrypt/live/$env_server_name/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/$env_server_name/privkey.pem;
+    ssl_certificate     /etc/letsencrypt/live/${env_server_name}/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/${env_server_name}/privkey.pem;
     ssl_prefer_server_ciphers  on;
     ssl_ciphers  'ECDH !aNULL !eNULL !SSLv2 !SSLv3';
 
