Add proxy setting

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -51,14 +51,18 @@ http {
     listen 80 default_server;
     listen 443 ssl;
     server_name $env_server_name;
-    ssl_certificate     "/etc/letsencrypt/live/$env_server_name/fullchain.pem";
-    ssl_certificate_key "/etc/letsencrypt/live/$env_server_name/privkey.pem";
+    ssl_certificate     "/etc/letsencrypt/live/dentoolt.unasuke.com/fullchain.pem";
+    ssl_certificate_key "/etc/letsencrypt/live/dentoolt.unasuke.com/privkey.pem";
     ssl_prefer_server_ciphers  on;
     ssl_ciphers  'ECDH !aNULL !eNULL !SSLv2 !SSLv3';
 
     # redirect to https
     if ( $http_x_forwarded_proto = "http" ) {
       rewrite ^(.*)$ https://$env_server_name$1 permanent;
+    }
+
+    location / {
+      proxy_pass http://app;
     }
   }
 }
