--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,3 +51,17 @@ services:
       - python-kobin
       - golang-gin
     restart: always
+  nginx-test:
+    build:
+      dockerfile: nginx/Dockerfile.local
+      context: .
+    environment:
+      - NGINX_SERVER_NAME=localhost
+    ports:
+      - "8000:80"
+    links:
+      - ruby-sinatra
+      - ruby-hanami
+      - python-kobin
+      - golang-gin
+    restart: always
