Rename service nginx-test -> nginx-local
not for test

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,7 +51,7 @@ services:
       - python-kobin
       - golang-gin
     restart: always
-  nginx-test:
+  nginx-local:
     build:
       dockerfile: nginx/Dockerfile.local
       context: .
