--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -41,7 +41,7 @@ http {
   keepalive_timeout 60;
 
   upstream app {
-    server ruby-hanami:8101 fail_timeout=0;
+    server ruby-rack:8101 fail_timeout=0;
     server ruby-sinatra:8102 fail_timeout=0;
     server python-kobin:8103 fail_timeout=0;
     server golang-gin:8104 fail_timeout=0;
